# cardiomyocytes

./: .copier-answers.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: filter-3d-design.md  foundations.md  optical-flow-design.md  tensor-layout-decision.md
iivs_cardio/common/: __init__.py  cuda_utils.py  device.py  warp.py
iivs_cardio/data/preprocessing/: filtering.py  kernels.py  normalization.py
iivs_cardio/data/preprocessing/filtering/: __init__.py  kernel.py  sequence.py
iivs_cardio/optical_flow/: evaluation.py
iivs_cardio/optical_flow/estimators/: __init__.py  base.py
iivs_cardio/optical_flow/estimators/opencv/: __init__.py  base.py  deepflow.py  dualtvl1.py  farneback.py
scripts/: setup-opencv-cuda.ps1
scripts/compute_env/: check_compute_env.py  setup-opencv-cuda.ps1
scripts/optical_flow/: benchmark_estimator.py  benchmark_opencv.py
scripts/optical_flow/conf/: config.yaml
scripts/optical_flow/conf/preprocess/: legacy.yaml  raw.yaml
tests/: test_opencv.py  test_opencv_cuda.py
tests/common/: test_cuda_utils.py  test_device.py  test_warp.py
tests/data/preprocessing/: test_filtering.py  test_kernels.py  test_normalization.py
tests/data/preprocessing/filtering/: test_kernel.py  test_sequence.py
tests/optical_flow/: test_evaluation.py
tests/optical_flow/estimators/opencv/: test_estimators.py
